# opencv_playground

./: CMakeLists.txt  README.md  conandata.yml
align_rgb_channels/: README.md  main.cpp
coin_detection/: README.md  main.cpp
data/models/: eyeGlassClassifierHog.yml
find_known_objects/: README.md  main.cpp
homography_warp/: README.md  main.cpp
image_inpainting/: README.md  main.cpp
image_registration/: README.md  main.cpp
panorama_stitching/: README.md  main.cpp
screen_matting/: README.md  main.cpp
tenengrad_focus/: README.md  main.cpp
